--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -16,10 +16,7 @@
         \begin{cases}
             1 & e_i \sim e_j \\
             0 & otherwise \\
-        \end{cases}
-        \]
-        
-        
+        \end{cases} \]        
     \end{defn}
     Only one boundary and one coboundary can be defined on graphs, we shall name those gradient and divergence respectively.
 
