--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -8,26 +8,26 @@
     \end{defn}
 
     In a graph $\mc{G}$ the non trivial chain groups are therefore $C_0(\mc{G})$ and $C_1(\mc{G})$, also called vertex and edge spaces. 
-    The canonical basis of the vertex space is the set of vertexes $\{\ket{e_i}\}_{i \in I}$, and that of edges which is a subset of $\{\ket{e_i,e_j}\}_{(i,j)\in I\times I}$
+    The canonical basis of the vertex space is the set of vertexes $\{\ket{i}\}_{i \in I}$, and that of edges which is a subset of $\{\ket{i,j}\}_{(i,j)\in I\times I}$
 
     \begin{defn}
         Let $\mc{G}$ be a graph, we define the \ii{adjacency matrix} $A$ of $\mc{G}$ on the canical vertex basis by
         \[a_{ij} = 
         \begin{cases}
-            1 & \ket{e_i,e_j} \in C_1 \\
+            1 & \ket{i,j} \in C_1 \\
             0 & otherwise \\
         \end{cases} \]        
     \end{defn}
-    Only one boundary and one coboundary can be defined on graphs, we shall name those gradient and divergence respectively.
+    Only one boundary $\del_1$ and one coboundary $\del_1^\dagger$ can be defined on graphs, we shall name their dual representatives gradient $d_1^\dagger$ and divergence $d_1$ respectively.
 
     \begin{defn}
-        Let $\mc{G}$ be a graph, we define the \ii{gradient} $\del_1 : C_1 \to C_0$ by 
-        \[ \del_1\ket{e_i,e_j} := e_i - e_j \quad \forall \ket{e_i,e_j} \in C_1.\]
+        Let $\mc{G}$ be a graph, we define the \ii{boundary} $\del_1 : C_1 \to C_0$ by 
+        \[ \del_1\ket{i,j} := \ket{i} - \ket{j} \quad \forall \ket{i,j} \in C_1.\]
     \end{defn}
     
     \begin{defn}
-        Let $\mc{G}$ be a graph, we define the \ii{divergence} $\del^\dagger_1 : C_0 \to C_1$ by 
-        \[ \del^\dagger_1\ket{e_i} := \sum_{\ket{e_i,e_j} \in C_1} \ket{e_i,e_j}.\]
+        Let $\mc{G}$ be a graph, we define the \ii{coboundary} $\del^\dagger_1 : C_0 \to C_1$ by 
+        \[ \del^\dagger_1\ket{i} := \sum_{\ket{i,j} \in C_1} \ket{i,j}.\]
     \end{defn}
 
     {\color{red} Disegno che mostra il cobordo di un nodo}
@@ -35,8 +35,10 @@
     The prevously defined generalizd Stokes' theorem is on graphs a discrete version of the divergence theorem.
 
     \begin{thm}
-        Let $\mc{G}$ be a graph, let $x \in C_0, v \in C_1$ then $\bra{x}\del^\dagger\ket{v} = \bra{v}\del\ket{x}$.
+        Let $\mc{G}$ be a graph, let $\ket{\phi} \in C_0, \ket{\psi} \in C_1$ then $\bra{\phi}\del_1\ket{\psi} = \bra{\psi}\del_1^\dagger\ket{\phi} = (d_1\bra{\phi})\ket{\psi}$.
     \end{thm}
+
+    Therefore the integral of the cochain $\ket{\psi}$ over the boundary of $\ket{\phi}$ equals the integral of the divergence of $\ket{\psi}$ over $\ket{\phi}$.
 
     {\color{red} Disegno che mostra il teorema della divergenza discreto}
 
@@ -45,19 +47,13 @@
     the functions on the graph (cochains) by their dual chains.
 
     \begin{defn}
-        Let $\mc{G}$ be a graph, we define the \ii{laplacian} $\Delta_1 : C_0 \to C_0$ by 
+        Let $\mc{G}$ be a graph, we define the \ii{$1$-laplacian} $\Delta_1 : C_0 \to C_0$ by 
         \[ \Delta_1 := \del_1 \circ \del^\dagger_1.\]
     \end{defn}
 
-    An intersting property of the laplacian is that the dimension of its kernel equals the connected components of the graph.
+    One intersting propertiy of the $1$-laplacian is that the dimension of its kernel equals the connected components of the graph.
 
-    \newpage
-
-    {\color{red} Esempio con un grafo piccolo e disegno \\
-
-    Let $\mc{G}$ be the graph illustrated 
-    
-    then the laplacian expressed in terms of the canoncal vertex basis, which I now denote $\{\ket{i}\}_{i \in I}$, is
+    Let $\mc{G}$ be the graph  in Fig..., then the laplacian expressed in terms of the canoncal vertex basis $\{\ket{i}\}_{i \in I}$, is
 
     \[\begin{pmatrix}
             2 & -1 & -1 & 0 & 0 & 0 & 0 & 0 & 0 \\
@@ -71,7 +67,7 @@
             0 & 0 & 0 & 0 & 0 & 0 & 0 & -1 & 1 
         \end{pmatrix}. \] 
 
-    It can be calculated by:
+    The laplacian matrix is calculated as follows
     \[ \Delta_1 \ket{1} = \del_1\ket{1,2} + \del_1\ket{1,3} = 2\ket{1}-\ket{2}-\ket{3},\]
     \[ \Delta_1 \ket{2} = \del_1\ket{2,1} + \del_1\ket{2,3} = -\ket{1}+2\ket{2}-\ket{3},\]
     \[ \Delta_1 \ket{3} = \del_1\ket{3,1} + \del_1\ket{3,2} = -\ket{1}+-\ket{2}+2\ket{3},\]
@@ -85,7 +81,7 @@
     Three invariant subspaces emerge from the laplacian, that determine three different laplacians, namely
     \[ \Delta_1 = \Delta_1^\mc{A} \oplus \Delta_1^\mc{B} \oplus \Delta_1^\mc{C}. \]
 
-    Furthermore any of those three blocks has a 1-dimensional kernel, in fact the dimensional equiation for the laplacians is
+    Furthermore any of those three blocks has a $1$-dimensional kernel, in fact the dimensional equiations for the laplacians are
 
     \[dim(ker\Delta_1^\mc{A}) =dimC_0(\mc{A}) - rank
     \begin{pmatrix}
@@ -122,22 +118,28 @@
         1 & -1 \\
         0 & 0
     \end{pmatrix} = 2-1 = 1.\]
-        
-    Then we can also observe the $\Delta_2^\mc{A}$ acting on the triangle on the basis $\{\ket{1,2},\ket{2,3},\ket{3,1}\}$ as
+
+    We can also define an higher dimensional laplacian on the graph.
+
+    \begin{defn}
+        Let $\mc{G}$ be a graph, we define the \ii{$2$-laplacian} $\Delta_1 : C_0 \to C_0$ by 
+        \[ \Delta_1 := \del_1^\dagger \circ \del_1.\]
+    \end{defn}
+
+    One intersting propertiy of the $2$-laplacian is that the dimension of its kernel equals the number of independent cycles.
+    In fact we can expand $\Delta_2^\mc{A} := \del_1^\dagger\del_1$ the basis $\{\ket{1,2},\ket{2,3},\ket{3,1}\}$ as
     \[\begin{pmatrix}
         2 & -1 & -1  \\
         -1 & 2 & -1  \\
         -1& -1 & 2 
     \end{pmatrix}.\] 
-    It can be calculated by:
+    The laplacian matrix is calculated as follows
     \[\Delta_2^\mc{A}\ket{1,2} = \del_1^\dagger(\ket{1}-\ket{2}) = 2\ket{1,2}-\ket{3,1}-\ket{2,3},\]
     \[\Delta_2^\mc{A}\ket{2,3} = \del_1^\dagger(\ket{2}-\ket{3}) = -\ket{1,2}+2\ket{2,3}-\ket{3,1},\]
     \[\Delta_2^\mc{A}\ket{3,1} = \del_1^\dagger(\ket{3}-\ket{1}) = -\ket{1,2}+2\ket{3,1}-\ket{2,3}.\]
 
+    We can notice that $\Delta_2$ has a $1$-dimensional kernel.
 
-
-
-    Then we see that is has a 1-dimensional kernel
     \[ dim(ker\Delta_2^\mc{A}) = dimC_1(\mc{A}) - rank
         \begin{pmatrix}
             2 & -1 & 1  \\
@@ -149,13 +151,8 @@
             0 & 1 & -1  \\
             0 & 0 & 0 
         \end{pmatrix} = 3 - 2 =  1. \]
-    Since the sum of the three raws is 0 we can say that the only linearly independent $1$-cycle is $\ket{1,2}+\ket{2,3}+\ket{3,1}$. 
-    
-    
 
-
-
-        }
+    Since the sum of the three raws is $0$ we can say that the only linearly independent $1$-cycle is $\ket{1,2}+\ket{2,3}+\ket{3,1}$.
 
     This theorem will be proven in \autoref{ch:3}.
 \end{document}
