--- a/tesi/sections/3/1.tex
+++ b/tesi/sections/3/1.tex
@@ -2,6 +2,6 @@
 \begin{document}
     In many classification task the neural networks seem to learn some symmetries under which the classification is invariant.
     In some simple situations, where these symmetries are obvious and understandable by humans, we hope to find a neural architecture
-    that already knows the symmetry of the data before starting to learn. An approach was proposed in \cite{G-CNN} with group equivariant
+    that already knows the symmetry of the data before starting to learn. An approach was proposed in \cite{gcnn} with group equivariant
     convolutional networks. Before discussing those particular networks we analyse the meaning of group equivariance.
 \end{document}
