--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -75,6 +75,10 @@
 \newcommand{\then}{\Rightarrow}
 \newcommand{\hull}[1]{\langle #1 \rangle}
 \newcommand{\m}{\text{-}}
+\newcommand{\ch}[1]{\langle #1 \rangle}
+% \newcommand{\scal}[2]{#1 \cdot #2 }
+\newcommand{\im}{\mathrm{Im}}
+% \newcommand{\ker}{\mathrm{ker}}
 
 \begin{document}
     \begin{titlepage}
