--- a/tesi/sections/1/4.tex
+++ b/tesi/sections/1/4.tex
@@ -1,13 +1,18 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
 
-    In order to define data on simplicial complexes we are interested in studying the dual of the chains $\ket{\sigma}$,
-    which we shall call cochains $\bra{\sigma}$.
+    In order to define data on simplicial complexes we are interested in studying the dual of the chains $\ch{\sigma}$,
+    which we shall call cochains $\varphi_{\ch{\sigma}}$.
        
     \begin{defn}
         Let $C_p$ be the group p-chains, we define the group of \ii{p-cochains} to 
-        be $C^p := Hom(C_p, G)$, i.e. the dual space of $C_p$.
+        be $C^p := Hom(C_p, \R)$, i.e. the dual space of $C_p$.
     \end{defn}
+
+    \begin{prop}
+        The homomorphims $\{\varphi_{\ch{\sigma_i}}:C_p \to \R\}$ such that $\varphi_{\ch{\sigma_i}}(\ch{\sigma_j}) = \delta_{ij}$
+        form a basis of $C^p$.
+    \end{prop}
 
     As well as with for chains, we have also for cochains a sequence of homeomorphisms called \ii{coboundary maps}. The coboundary maps are defined
     to be the dual of the boundary maps, hence satisfying a dual version of the homology lemma called \ii{cohomology lemma}.
@@ -15,11 +20,11 @@
     \begin{defn}
         The dual of the boundary maps which we shall call
         \ii{coboundary maps}, is the group homomorphsm defined by
-        \[ d_{p+1} : C^p \to C^{p+1} \quad d_p\bra{\sigma} := \bra{\sigma} \del_{p+1} \quad \forall \bra{\sigma} \in C^p.\]
-        Therefore $(d_{p+1}\bra{\sigma})\ket{\tau} = \bra{\sigma} \del_{p+1} \ket{\tau} \quad \forall \ket{\tau} \in C_p$.
+        \[ d_{p+1} : C^p \to C^{p+1} \quad d_{p+1}\varphi_{\ch{\sigma}} := \varphi_{\ch{\sigma}} \circ \del_{p+1} \quad \forall \varphi_{\ch{\sigma}} \in C^p.\]
+        Therefore $d_{p+1}\varphi_{\ch{\sigma}}(\ch{\tau}) = \varphi_{\ch{\sigma}} (\del_{p+1}\ch{\tau}) \quad \forall \ch{\tau} \in C_p$.
     \end{defn}
 
-    The proof of $d^p+1 \circ d_p$ follow directly from the homology lemma. The cohomology lemma allows us to define the \ii{cohomology group}.
+    The proof of $d_{p+1} \circ d_p = 0$ follow directly from the homology lemma. The cohomology lemma allows us to define the \ii{cohomology group}.
     
     \begin{defn}
         We define the \ii{p-cohomology group} to be 
@@ -29,25 +34,40 @@
     \end{defn}
 
     To have a specular intuition of what the coboundary operator actually does, we equipe our simplicial chain groups with
-    an inner product. This finite dimensional Hilbert space structure shall allow us to represent the cochain $\bra{\sigma}$ evaluated on the chain $\ket{\tau}$ 
-    as the inner product $\braket{\sigma}{\tau}$.
+    an inner product. This finite dimensional Hilbert space structure shall allow us to represent the cochain $\varphi_{\ch{\sigma}}$ evaluated on the chain $\ch{\tau}$ 
+    as the inner product $\scal{\ch{\sigma}}{\ch{\tau}}$.
 
     \begin{defn}
-        We define the scalar product $\braket{}{} : C_p \times C_p \to \R$ on the canonical basis of $C_p$ to be 
-        \[ \braket{i}{j} = \delta_{ij} ,\]  
-        where $i,j$ are any two p-simplexes in the canonical basis of $C_p$ and $\delta_{ij}$ is the Kronecker Delta.
+        We define the scalar product $\scal{\cdot}{\cdot} : C_p \times C_p \to \R$ on the canonical basis of $C_p$ to be 
+        \[ \scal{\ch{\sigma_i}}{\ch{\sigma_j}} = \delta_{ij} ,\]  
+        where $i,j$ are any two p-simplexes in the canonical basis of $C_p$ and $\delta$ is the Kronecker Delta.
     \end{defn}
+
+    Another way to see this scalar product is as an integration.
+
+    \begin{defn}
+        We define $\int^p:C_p\times C^p\to\R$ to be an \ii{integration} such that
+        \[ \int^{p}_{\ch{\tau}}\varphi_{\ch{\sigma}} := \varphi_{\ch{\sigma}}(\ch{\tau}).\]
+    \end{defn}
+
+    From this point of view it is clear that the definition of coboundary is equivalent to a discrete generalized Stokes' theorem.
+
+    \begin{prop}
+        From the definitions $\int^{p}_{\ch{\del_{p+1}\tau}}\varphi_{\ch{\sigma}}=\int^{p+1}_{\ch{\tau}}d_{p+1}\varphi_{\ch{\sigma}}$.
+    \end{prop}
+
+    One can therefore think of the coboundary operator as a discrete exterior derivative acting on cochains. 
+    Furthermore the choice of a measure of integration is equivalent to a choice of a basis for the chain group.
 
     The same Hilbert space structure allows us to represent the coboundary operator $d$ acting on a cochain with its cochain representative.
 
     \begin{defn}
-        Let $d_{p+1} : C^p \to C^{p+1}$ be the coboundary operator, then for any \\ $\bra{\sigma} \in C^p, \ket{\tau} \in C_{p+1}$ we can define its dual representation $\del^\dagger_{p+1}$ by
-        \[(d_{p+1}\bra{\sigma})\ket{\tau} = \bra{\sigma} \del_{p+1} \ket{\tau} = \bra{\tau} \del^\dagger_{p+1} \ket{\sigma} .\]
+        Let $d_{p+1} : C^p \to C^{p+1}$ be the coboundary operator, then for any \\ $\varphi_{\ch{\sigma}} \in C^p, \ch{\tau} \in C_{p+1}$ we can define its dual representation $\del^\dagger_{p+1}:C_p \to C_{p+1}$ by
+        \[d_{p+1}\varphi_{\ch{\sigma}}(\ch{\tau}) = \varphi_{\del^\dagger_{p+1}\ch{\sigma}},\]
+        where $\del_{p+1}^\dagger$ is the adjoint of $\del_{p+1}$ w.r.t. $\scal{\cdot}{\cdot}$, 
+        namely $\scal{\ch{\sigma}}{\del_{p+1}\ch{\tau}} = \scal{\del^\dagger_{p+1} \ch{\sigma}}{\ch{\tau}}$.
     \end{defn}
 
-    We can notice that our definitions lead to the restatement of the equivalent of the generalized Stokes' theorem on simplicial complexes
-    according to the integration previously defined, i.e. $(d\bra{\sigma})\ket{\tau} = \bra{\sigma}\del\ket{\tau}$. One can therefore think of the coboundary
-    operator as a discrete exterior derivative acting on cochains. Similarly we name the inner product \ii{integration} due to the analogy previously stated, the
-    choice of a measure of integration is equivalent to a choice of a basis for the chain group.
+    One can therefore think of the coboundary operator as a discrete exterior derivative acting on cochains.
 
 \end{document}
