--- a/tesi/sections/1/5.tex
+++ b/tesi/sections/1/5.tex
@@ -41,17 +41,17 @@
     is isomorphic to the p-homology group.
 
     \begin{thm}
-        Let $\Delta_p$ be a laplacian operator, then $ker\Delta_p \simeq H_p$.
+        Let $\Delta_p$ be a laplacian operator, then $\ker\Delta_p \simeq H_p$.
     \end{thm}
     \begin{proof}
         We recall the definition of laplacian $\Delta_p =: \del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p$.\\
-        Because of the homology lemma $\Delta^+_p\Delta-_p = \Delta^-_p\Delta^+_p = 0$, therefore $ker\Delta^{\pm}_p \subset im\Delta^{\mp}_p.$\\
-        It is trivial to see that, since $ker\Delta_p = ker\Delta^+_p \cap ker\Delta^-_p $, we have that $ker\del^\dagger_{p+1} \cap ker\del_p \subset ker\Delta_p.$ \\
-        Less trivial is the opposite inclusion, in fact, let $\ket{\sigma} \in ker\Delta_p$, we have that $\del_{p+1}^\dagger\ket{\sigma} \in ker\del_{p+1} = (im\del_{p+1}^\dagger)^\perp$ 
-        and of course that $\del_{p+1}^\dagger\ket{\sigma} \in im\del_{p+1}^\dagger$.\\
+        Because of the homology lemma $\Delta^+_p\Delta-_p = \Delta^-_p\Delta^+_p = 0$, therefore $\ker\Delta^{\pm}_p \subset \im\Delta^{\mp}_p.$\\
+        It is trivial to see that, since $\ker\Delta_p = \ker\Delta^+_p \cap \ker\Delta^-_p $, we have that $\ker\del^\dagger_{p+1} \cap \ker\del_p \subset \ker\Delta_p.$ \\
+        Less trivial is the opposite inclusion, in fact, let $\ket{\sigma} \in \ker\Delta_p$, we have that $\del_{p+1}^\dagger\ket{\sigma} \in \ker\del_{p+1} = (\im\del_{p+1}^\dagger)^\perp$ 
+        and of course that $\del_{p+1}^\dagger\ket{\sigma} \in \im\del_{p+1}^\dagger$.\\
         Therefore, since our integration is an inner product, because of the adjunction relation we have that the chain $\del_{p+1}^\dagger\ket{\sigma}$ must
         be the null chain, hence the inclusion $\ker\Delta_p \subset \ker\del_{p+1}^\dagger$. Similarly we can see that $\ker\Delta_p \subset \ker\del_p$,        
-        therefore $ker\Delta_p \subset ker\del^\dagger_{p+1} \cap ker\del_p $. Now, since $ker\Delta_p = ker\del^\dagger_{p+1} \cap ker\del_p$, we conclude that 
-        $ker\Delta_p = (im\del_{p+1}^\dagger)^\perp \cap ker\del_p \simeq H_p$. \qedhere
+        therefore $\ker\Delta_p \subset \ker\del^\dagger_{p+1} \cap \ker\del_p $. Now, since $\ker\Delta_p = \ker\del^\dagger_{p+1} \cap \ker\del_p$, we conclude that 
+        $\ker\Delta_p = (\im\del_{p+1}^\dagger)^\perp \cap \ker\del_p \simeq H_p$. \qedhere
     \end{proof}
 \end{document}
