--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -13,8 +13,8 @@
     \begin{section}{Simplicial Cohomology}
         \subfile{sections/1/4} 
     \end{section}
-    \begin{section}{Laplacian Operators}
-        \label{sec:1:5}
-        \subfile{sections/1/5} 
-    \end{section}
+    % \begin{section}{Laplacian Operators}
+    %     \label{sec:1:5}
+    %     \subfile{sections/1/5} 
+    % \end{section}
 \end{document}
