--- a/tesi/sections/3/3.tex
+++ b/tesi/sections/3/3.tex
@@ -1,7 +1,7 @@
 \documentclass[../3.tex]{subfiles}
 \begin{document}
 
-    In \autoref{ch:1} at \autoref{sec:1:5} we discussed laplacian operators, in this section we use the laplacian 
+    In \autoref{ch:1} we discussed laplacian operators, in this section we use the laplacian 
     eigenchains to define convolutional layers as in \cite{simplicialNN} in a so called \ii{simplicial neural network}. 
 
     Let $\{\ket{i}\}_{i \in I}$ be the canonical basis of chains for $C_p$, namely the chains corresponding to the $p$-simplexes of the simplicial complex.
