--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -9,6 +9,8 @@
 \usepackage{adjustbox}
 \usepackage[margin=2cm]{geometry}
 \usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage{wrapfig}
 \usepackage{tikz}
 \usepackage[colorlinks=true,linkcolor=black,urlcolor=black, citecolor=black]{hyperref}
@@ -75,9 +77,10 @@
 \newcommand{\then}{\Rightarrow}
 \newcommand{\hull}[1]{\langle #1 \rangle}
 \newcommand{\m}{\text{-}}
-\newcommand{\ch}[1]{\langle #1 \rangle}
+% \newcommand{\ch}[1]{\langle #1 \rangle}
+\newcommand{\ch}[1]{\ket{#1}}
 % \newcommand{\scal}[2]{#1 \cdot #2 }
-\newcommand{\im}{\mathrm{Im}}
+\newcommand{\im}{\mathrm{im}\,}
 % \newcommand{\ker}{\mathrm{ker}}
 
 \begin{document}
@@ -99,6 +102,26 @@
         \subfile{sections/1}
     \end{chapter}
     \begin{chapter}{Graphs}
+        An important branch of geometric deep learning is graph representation learning. In this section we will therefore
+        introduce graphs and graphs laplacians to build a mathematical background for graph neural networks.
+        Graphs can be used to encode a wide variety of data, from social networks friendships to maps. An interesting example
+        comes from the beginning of topology itself in Koningsberg. Euler noticed that in Koningsberg, there was no path that 
+        allowed to cross all seven bridges just once, therefore he started to simplify the problem to approach it in a more mathematical 
+        way.
+        \begin{figure}[H]
+            \begin{minipage}{.5\textwidth}
+                \centering
+                \includegraphics[width=6cm, height=4cm]{sections/2/Bridge}
+                \caption{The city of Konigsberg and the\\ seven bridges.}
+                \label{fig:2:1}
+            \end{minipage}
+            \begin{minipage}{.5\textwidth}
+                \centering
+                \includegraphics[width=3cm, height=3cm]{sections/2/kgraph}
+                \caption{Graph representing Konigsberg's seven bridges}
+                \label{fig:2:2}
+            \end{minipage}
+        \end{figure}
         \subfile{sections/2}
     \end{chapter}
     \begin{chapter}{Geometric Deep Learning}
