--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -32,15 +32,15 @@
 
     {\color{red} Disegno che mostra il cobordo di un nodo}
 
-    The prevously defined generalizd Stokes' theorem is on graphs a discrete version of the divergence theorem.
+    % The prevously defined generalizd Stokes' theorem is on graphs a discrete version of the divergence theorem.
 
-    \begin{thm}
-        Let $\mc{G}$ be a graph, let $\ket{\phi} \in C_0, \ket{\psi} \in C_1$ then $\bra{\phi}\del_1\ket{\psi} = \bra{\psi}\del_1^\dagger\ket{\phi} = (d_1\bra{\phi})\ket{\psi}$.
-    \end{thm}
+    % \begin{thm}
+    %     Let $\mc{G}$ be a graph, let $\ket{\phi} \in C_0, \ket{\psi} \in C_1$ then $\bra{\phi}\del_1\ket{\psi} = \bra{\psi}\del_1^\dagger\ket{\phi} = (d_1\bra{\phi})\ket{\psi}$.
+    % \end{thm}
 
-    Therefore the integral of the cochain $\ket{\psi}$ over the boundary of $\ket{\phi}$ equals the integral of the divergence of $\ket{\psi}$ over $\ket{\phi}$.
+    % Therefore the integral of the cochain $\ket{\psi}$ over the boundary of $\ket{\phi}$ equals the integral of the divergence of $\ket{\psi}$ over $\ket{\phi}$.
 
-    {\color{red} Disegno che mostra il teorema della divergenza discreto}
+    % {\color{red} Disegno che mostra il teorema della divergenza discreto}
 
     On a graph that admits non trivial gradient and divergence, we can define a non trivial laplacian operator as the gradient of the divergence.
     Although this might sound strange, the inversion of gradient and divergence in the definition of laplacian is due to the fact that we are representing
