--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -79,6 +79,8 @@
 \newcommand{\m}{\text{-}}
 % \newcommand{\ch}[1]{\langle #1 \rangle}
 \newcommand{\ch}[1]{\ket{#1}}
+% \newcommand{\cc}[1]{\varphi_{\langle #1 \rangle}}
+\newcommand{\cc}[1]{\bra{#1}}
 % \newcommand{\scal}[2]{#1 \cdot #2 }
 \newcommand{\im}{\mathrm{im}\,}
 % \newcommand{\ker}{\mathrm{ker}}
@@ -118,7 +120,7 @@
             \begin{minipage}{.5\textwidth}
                 \centering
                 \includegraphics[width=4cm, height=3cm]{sections/2/kgraph}
-                \caption{Graph representing Konigsberg's seven bridges}
+                \caption{Graph representing Konigsberg's seven bridges.}
                 \label{fig:2:2}
             \end{minipage}
         \end{figure}
