--- a/tesi/sections/1/3.tex
+++ b/tesi/sections/1/3.tex
@@ -22,12 +22,12 @@
         \label{orientedchains}
         Let $\mc{A}$ be a simplicial complex, we define the \ii{group of oriented p-chains} as
         the group $\mc{C}_p(\mc{A},\R)$ subject to $ \{x_i\}_{i \in I} = sgn(\pi)\{x_i\}_{i \in \pi(I)}$, where $\pi:I \to I$ is 
-        any permutation of the index set. We shall denote this group as $C_p(\mc{A},\R)$, and its chains with the notation $\ch{x_i}_{i \in I}$.
+        any permutation of the index set. We shall denote this group as $C_p(\mc{A},\R)$, and its chains with the notation $\ch{\sigma}$.
     \end{defn}
 
     To keep our notation light we shall write $C_p$ instead of $C_p(\mc{A},\R)$. The constraints due to the 
-    permutations in definition\autoref{orientedchains} simply implies that whenever we swap two vertexes in the chain
-    we must multiply by $(-1)$.
+    permutations in definition\autoref{orientedchains} simply implies that whenever we swap two vertexes in the simplex
+    we must multiply by $(-1)$. 
     
     \begin{prop}
         $C_p$ is an abelian group.
