--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -30,7 +30,7 @@
         \[ \del^\dagger_1\ket{i} := \sum_{\ket{i,j} \in C_1} \ket{i,j}.\]
     \end{defn}
 
-    {\color{red} Disegno che mostra il cobordo di un nodo}
+    % {\color{red} Disegno che mostra il cobordo di un nodo}
 
     % The prevously defined generalizd Stokes' theorem is on graphs a discrete version of the divergence theorem.
 
@@ -52,8 +52,35 @@
     \end{defn}
 
     One intersting propertiy of the $1$-laplacian is that the dimension of its kernel equals the connected components of the graph.
+    To illustrate some of the properties of graphs we will refer to the graph in \autoref{fig:2:3}.
+
+    \begin{figure}[H]
+        \begin{minipage}{.5\textwidth}
+            \centering
+            \includegraphics[width=9cm]{sections/2/graphex}
+            \caption{The graph.}
+            \label{fig:2:3}
+        \end{minipage}
+        \begin{minipage}{.5\textwidth}
+            \centering
+            \[\begin{pmatrix}
+                0 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 \\
+                1 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 \\
+                1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+                0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 \\
+                0 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 0 \\
+                0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 \\
+                0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 \\
+                0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 \\
+                0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0
+            \end{pmatrix}. \]
+            \caption{Adjacency matrix of the graph.}
+            \label{fig:2:4}
+        \end{minipage}
+    \end{figure}
+
     \begin{exa}
-        Let $\mc{G}$ be the graph  in {\color{red}Fig?}, then the laplacian expressed in terms of the canoncal vertex basis $\{\ket{i}\}_{i \in I}$ is
+        Let $\mc{G}$ be the graph  in \autoref{fig:2:3}, then the $0$-laplacian expressed in terms of the canoncal vertex basis $\{\ket{i}\}_{i \in I}$ is
 
         \[\begin{pmatrix}
                 2 & -1 & -1 & 0 & 0 & 0 & 0 & 0 & 0 \\
@@ -62,7 +89,7 @@
                 0 & 0 & 0 & 1 & -1 & 0 & 0 & 0 & 0 \\
                 0 & 0 & 0 & -1 & 3 & -1 & -1 & 0 & 0 \\
                 0 & 0 & 0 & 0 & -1 & 1 & 0 & 0 & 0 \\
-                0 & 0 & 0 & 0 & -1 & 0 & -1 & 0 & 0 \\
+                0 & 0 & 0 & 0 & -1 & 0 & 1 & 0 & 0 \\
                 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & -1 \\
                 0 & 0 & 0 & 0 & 0 & 0 & 0 & -1 & 1 
             \end{pmatrix}. \] 
@@ -157,6 +184,4 @@
 
         Since the sum of the three raws is $0$ we can say that the only linearly independent $1$-cycle is $\ket{1,2}+\ket{2,3}+\ket{3,1}$.
     \end{exa}
-
-    This two properties are a particular case of a general theorem that will be proven in \autoref{ch:3}.
 \end{document}
