--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -1,6 +1,6 @@
 \documentclass[../2.tex]{subfiles}
 \begin{document}
-    {\Huge Unstable}
+    {\Huge Unstable}\\
     In \autoref{ch:1} we studied homology and cohomology on abstract simplicial complexes, in this chapter we shall discuss in detail
     $1$-dimensional abstract simplicial complexes.
 
